# api-worker

./: .gitignore
python-worker/: .env.example  .gitignore  Dockerfile  docker-compose.local.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
python-worker/app/: config.py  main.py  worker.py
python-worker/app/api/: __init__.py  dependencies.py
python-worker/app/api/routes/: health.py  process.py  quality.py
python-worker/app/models/: __init__.py  deposit.py  llama_parser.py
python-worker/app/services/: __init__.py  business_validator.py  callback_client.py  cloudsql_client.py  document_ai.py  image_quality.py  llama_parser_client.py  metrics.py  numero_operacion_rules.py  prompt_selector.py  quality_validator.py  schema_registry.py  storage_client.py
python-worker/app/tasks/: __init__.py  process_deposit.py
python-worker/app/utils/: image_utils.py  pdf_utils.py  redis_queue_client.py  retry.py  schema_builder.py
python-worker/scripts/: init_db.py  test_image.py
python-worker/tests/unit/: test_quality_validator.py
