[project]
name = "confirmo-worker"
version = "1.0.0"
description = "Procesamiento de vouchers - Confirmo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "celery==5.3.6",
    "redis==5.0.1",
    "asyncpg==0.29.0",
    "httpx==0.26.0",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "google-cloud-storage==2.14.0",
    "opencv-python-headless==4.8.1.78",
    "numpy==1.26.2",
    "pillow==10.1.0",
    "pdf2image==1.16.3",
    "python-multipart==0.0.6",
    "structlog==24.1.0",
    "prometheus-client==0.19.0",
    "alembic==1.13.1",
    "tenacity==8.2.3",
    "llama-cloud==2.9.1",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "pytest-mock==3.12.0",
    "httpx==0.26.0",
    "faker==22.0.0",
    "testcontainers==4.6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
